--- a/src/app/common/navbar/navbar.component.html
+++ b/src/app/common/navbar/navbar.component.html
@@ -1,1 +1,21 @@
-<p>navbar works!</p>
+<nav class="navbar navbar-expand-md special-color-dark navbar-dark fixed-top">
+    <a class="navbar-brand" [routerLink]="['/']">Your Name</a>
+    <button (click)="navbarButtonClicked()" id="navbar-button" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-label="Open Menu">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" [routerLink]="['/']" (click)="collapseNavbar()">Home</a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link" [routerLink]="['/projects']" (click)="collapseNavbar()">Projects</a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link" [routerLink]="['/competitions']" (click)="collapseNavbar()">Hackathons and Competitions</a>
+            </li>
+        </ul>
+    </div>
+</nav>
