--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-
-<router-outlet></router-outlet>
-
+<div class='content'>
+    <router-outlet></router-outlet>
+</div>
 <app-footer></app-footer>
