designed the footer

--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -1,1 +1,13 @@
-<p>footer works!</p>
+<footer class="pagefooter special-color border-bottom">
+    <div class="container">
+        <div class="row justify-content-center">
+            <a class="column social-media align-self-center" target="_blank" href="https://www.instagram.com/"><i class="fa fa-10x fa-instagram" aria-hidden="true"></i></a>
+            <a class="column social-media" target="_blank" href="https://www.facebook.com/"><i class="fa fa-facebook fa-lg" aria-hidden="true"></i></a>
+            <a class="column social-media" target="_blank" href="https://github.com/"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
+            <a class="column social-media" target="_blank" href="https://www.linkedin.com/"><i class="fa fa-linkedin fa-lg" aria-hidden="true"></i></a>
+        </div>
+      <div class="row justify-content-center">
+            <small class="text-muted">Your Name © 2020</small>
+      </div>
+    </div>
+</footer>
