designed the home page

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,33 @@
-<p>home works!</p>
+<div class='container'>
+    <div class='title'>
+        <h1>Programming is 
+            <code appRotateText>hello world</code>
+        </h1>
+    </div>
+    <p>
+        Your introduction goes here
+    </p>
+    <hr />
+    <h3>Here's a bit about me</h3>
+    <ul>
+        <li>👨‍🎓 Currently Studying at...</li>
+        <li>🎮 Fun thing you have done...</li>
+        <li>🖥️ Your work experience...</li>
+        <li>👨‍🏭 Interesting project you have worked on</li>
+        <li>🚵‍♂️ Hobbies...</li>
+    </ul>
+    <hr />
+    <h3>My Tech Stack</h3>
+    <ul>
+        <li>Technologies</li>
+        <li>that</li>
+        <li>you</li>
+        <li>have</li>
+        <li>worked</li>
+        <li>with</li>
+        <li>go</li>
+        <li>here</li>
+    </ul>
+    <hr />
+    <div class="git-stats" #gitStatsContainer></div>
+</div>
