--- a/src/app/pages/competitions/competition-card/competition-card.component.html
+++ b/src/app/pages/competitions/competition-card/competition-card.component.html
@@ -1,1 +1,20 @@
-<p>competition-card works!</p>
+<div class='card competition-card'>
+    <div *ngIf="competition.photoUrl" class='view overlay'>
+        <img class='card-img-top' [src]='competition.photoUrl' [alt]="competition.title">
+        <a>
+            <div class='mask rgba-white-slight'></div>
+        </a>
+    </div>
+
+    <div class='card-body'>
+        <h4 class='card-title'>{{ competition.title }}</h4>
+        <hr />
+        <p class='card-text'>{{ competition.description }}</p>
+    </div>
+
+    <div class='rounded-bottom mdb-color lighten-3 text-center pt-3'>
+        <p class='white-text pr-2'>
+            <i class='fa fa-clock-o pr-1'></i>{{ competition.date }}
+        </p>
+    </div>
+</div>
